After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698767 - window title does not update as user types search characters
window title does not update as user types search characters
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: File Search Interface
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-24 16:36 UTC by Adam Dingle
Modified: 2015-03-01 23:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.19 KB, patch)
2014-07-27 18:50 UTC, Jakub Srba
reviewed Details | Review
patch 02 (1.31 KB, patch)
2014-08-05 07:41 UTC, Jakub Srba
none Details | Review

Description Adam Dingle 2013-04-24 16:36:49 UTC
I'm running Nautilus from git master, built with --disable-tracker.

To see the problem:

1. In your home directory, type Ctrl+F to initiate a search.
2. Type "ab" and then pause for a moment.  Nautilus will begin searching for files.
3. Extend the search term by typing "cde".

The path bar will now read

  Search for "abcde"

But the window title will still read

  Search for "ab"
Comment 1 António Fernandes 2013-04-24 16:55:24 UTC
I guess you are seeing this bug on version 3.8. Please update the version if this is not the case.

I can't reproduce this bug on nautilus 3.6.

But I can reproduce it on nautilus from git master, with tracker support enabled.
Comment 2 Adam Dingle 2013-04-24 16:57:02 UTC
I've only tested in git master (which is version 3.9, strictly speaking).
Comment 3 António Fernandes 2013-04-24 17:12:19 UTC
Thanks for the feedback. Now I see why you left it "unspecified". "3.9" is not available yet and "git master" is missing.
Comment 4 Sindhu S 2013-07-26 12:28:20 UTC
If it's relevant to post here, I've filed a bug about 'git master' version option being unavailable for nautilus bug page. see bug 704925
Comment 5 Jean-François Fortin Tam 2014-01-13 01:25:06 UTC
Adam, are you still seeing this with 3.10.1? I can't reproduce it, though on Fedora Nautilus is left with Tracker search enabled by default.
Comment 6 António Fernandes 2014-01-13 12:12:30 UTC
I'm still seeing this with 3.10.1 from Fedora.

Although there is no server-side titlebar now, the window title is still displayed in the overview.
Comment 7 Jakub Srba 2014-07-27 18:50:43 UTC
Created attachment 281824 [details] [review]
patch

I am also able to reproduce this bug. Attached patch solves the problem, although I'm not sure if it's the correct solution.
Comment 8 Cosimo Cecchi 2014-07-27 21:08:36 UTC
Review of attachment 281824 [details] [review]:

Looks good, but see comment below.

::: src/nautilus-window-slot.c
@@ +990,3 @@
 	if (slot->details->location &&
 	    g_file_equal (location, slot->details->location)) {
+		nautilus_window_slot_update_title (slot);

Could you add a comment here explaining why this is needed?
Comment 9 Jakub Srba 2014-08-05 07:41:32 UTC
Created attachment 282499 [details] [review]
patch 02

Comment added.
Comment 10 Carlos Soriano 2015-03-01 23:17:07 UTC
Sorry for the delay and thanks for the patch!